[package]
name = "GeyserExplorerPlugin"
version = "0.1.0"
edition = "2021"

[lib]
name = "geyser_plugin_explorer"
path = "src/geyser_plugin_explorer.rs"
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = "0.26"
solana-sdk = "2.1.0"
solana-transaction-status = "2.1.0"
agave-geyser-plugin-interface = "2.1.0"
log = "0.4"
simplelog = "0.12"
once_cell = "1.20.2"
